infra/configs/base/whoami.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: infra
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: whoami

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: infra
spec:
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: strip-prefix-whoami
#   namespace: infra
# spec:
#   stripPrefix:
#     prefixes:
#     - /whoami
#     forceSlash: false

# ---
# kind: Ingress
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: whoami
#   namespace: infra
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
#     traefik.ingress.kubernetes.io/router.middlewares: infra-strip-prefix-whoami@kubernetescrd
#     traefik.ingress.kubernetes.io/router.priority: "90"
#     cert-manager.io/cluster-issuer: letsencrypt-issuer
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /whoami
#         pathType: Prefix
#         backend:
#           service:
#             name: whoami
#             port:
#               name: web
#   tls:
#   - hosts:
#     - manage.app.vino9.net
#     secretName: manage-app-vino9net-cert
